fixed overflow and added to padding to home page hero button

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -29,3 +29,6 @@ p {
 .instagram_post_container:hover .instagram_post_overlay {
   display: block;
 }
+main {
+  overflow-x: hidden;
+}
